summative.moria.Moria.scala.error
Compilation error:
Moria:1: error: not found: value Mur
Mur = false
^Moria:4: error: not found: value Mur
while(Mur == false) {
      ^Moria:18: error: not found: value Mur
    Mur = true
    ^